--- a/_base-base.scss
+++ b/_base-base.scss
@@ -76,4 +76,33 @@
       }
       @include vertical-groove($shift, $spacing, $font-size, $base-font-size, $lines);
     } 
+    ///////////////////////////////////////////
+      //
+      //  Ubuntu 
+      //
+      //  with a base-line-height of 26px
+      //
+      ///////////////////////////////////////////
+      @if $font-family == "Ubuntu" {
+        $shift:0;
+        @if $font-size == 12px {$shift:.29;}
+        @else if $font-size == 14px {$shift:.28;}
+        @else if $font-size == 16px {$shift:.23;}
+        @else if $font-size == 18px {$shift:.21;} 
+        @else if $font-size == 20px {$shift:.2;}
+        @else if $font-size == 22px {$shift:.17;}
+        @else if $font-size == 24px {$shift:.70;}
+        @else if $font-size == 26px {$shift:.63;}
+        @else if $font-size == 28px {$shift:.59;}
+        @else if $font-size == 30px {$shift:.53;}
+        @else if $font-size == 32px {$shift:.51;}
+        @else if $font-size == 34px {$shift:.48;}
+        @else if $font-size == 36px {$shift:.47;}
+        @else if $font-size == 38px {$shift:.44;}
+        @else if $font-size == 40px {$shift:.43;}
+        @else{
+          $font-size:$base-font-size;
+        }
+        @include vertical-groove($shift, $spacing, $font-size, $base-font-size, $lines);
+      }
 }
