--- a/_base-base.scss
+++ b/_base-base.scss
@@ -2,6 +2,20 @@
 @mixins
 =====*/
 
+@mixin neutralise(){
+  font-family: $default-font-family, $fallback-font-stack;
+  font-size: $base-font-size;
+  line-height: $base-line-height;
+  margin:{
+    top: 0;
+    bottom: 0;
+  }
+  padding:{
+    top: 0;
+    bottom: 0;
+  }
+}
+
 @mixin vertical-groove(
   $shift, //Rhythm Vertical Shift
   $spacing: lines-for-font-size($base-font-size), // Trailing white space control.
