--- a/_base-base.scss
+++ b/_base-base.scss
@@ -86,6 +86,9 @@
       @else if $font-size == 30px {$shift:.50;}
       @else if $font-size == 32px {$shift:.50;}
       @else if $font-size == 34px {$shift:.46;}
+      @else if $font-size == 36px {$shift:.44;}
+      @else if $font-size == 38px {$shift:.40;}
+      @else if $font-size == 40px {$shift:.38;}
       @else{
         $font-size:$base-font-size;
       }
