--- a/_base-base.scss
+++ b/_base-base.scss
@@ -148,6 +148,8 @@
           @else if $font-size == 36px {$shift:.7;}
           @else if $font-size == 38px {$shift:.65;}
           @else if $font-size == 40px {$shift:.6;}
+          @else if $font-size == 48px {$shift:.5;}
+          @else if $font-size == 60px {$shift:.9;}
           @else{
             $font-size:$base-font-size;
           }
