--- a/_base-base.scss
+++ b/_base-base.scss
@@ -104,6 +104,7 @@
       @if $font-family == "Ubuntu" {
         $shift:0;
         @if $font-size == 12px {$shift:.29;}
+        @else if $font-size == 11px {$shift:.32;}
         @else if $font-size == 14px {$shift:.28;}
         @else if $font-size == 16px {$shift:.23;}
         @else if $font-size == 18px {$shift:.21;} 
@@ -118,6 +119,8 @@
         @else if $font-size == 36px {$shift:.47;}
         @else if $font-size == 38px {$shift:.44;}
         @else if $font-size == 40px {$shift:.43;}
+        @else if $font-size == 48px {$shift:.28;}
+        @else if $font-size == 96px {$shift:.60;}
         @else{
           $font-size:$base-font-size;
         }
@@ -241,6 +244,39 @@
               @else if $font-size == 36px {$shift:.53;}
               @else if $font-size == 38px {$shift:.51;}
               @else if $font-size == 40px {$shift:.48;}
+              @else{
+                $font-size:$base-font-size;
+              }
+              @include vertical-groove($shift, $spacing, $font-size, $base-font-size, $lines);
+            }
+
+            ///////////////////////////////////////////
+            //
+            //  Aktiv Grotesk
+            //
+            //  with a base-line-height of 26px
+            //
+            ///////////////////////////////////////////
+            @if $font-family == "aktiv-grotesk-std" {
+              $shift:0;
+              @if $font-size == 12px {$shift:.30;}
+              @else if $font-size == 11px {$shift:.30;}
+              @else if $font-size == 14px {$shift:.28;}
+              @else if $font-size == 16px {$shift:.24;}
+              @else if $font-size == 18px {$shift:.21;}
+              @else if $font-size == 20px {$shift:.21;}
+              @else if $font-size == 22px {$shift:.21;}
+              @else if $font-size == 24px {$shift:.65;}
+              @else if $font-size == 26px {$shift:.60;}
+              @else if $font-size == 28px {$shift:.60;}
+              @else if $font-size == 30px {$shift:.58;}
+              @else if $font-size == 32px {$shift:.55;}
+              @else if $font-size == 34px {$shift:.51;}
+              @else if $font-size == 36px {$shift:.50;}
+              @else if $font-size == 38px {$shift:.42;}
+              @else if $font-size == 40px {$shift:.42;}
+              @else if $font-size == 48px {$shift:.27;}
+              @else if $font-size == 96px {$shift:.51;}
               @else{
                 $font-size:$base-font-size;
               }
