Open-sans 42px-60px

--- a/_base-base.scss
+++ b/_base-base.scss
@@ -216,6 +216,16 @@
               @else if $font-size == 36px {$shift:.48;}
               @else if $font-size == 38px {$shift:.43;}
               @else if $font-size == 40px {$shift:.41;}
+              @else if $font-size == 42px {$shift:.49;}
+              @else if $font-size == 44px {$shift:.44;}
+              @else if $font-size == 46px {$shift:.44;}
+              @else if $font-size == 48px {$shift:.41;}
+              @else if $font-size == 50px {$shift:.40;}
+              @else if $font-size == 52px {$shift:.32;}
+              @else if $font-size == 54px {$shift:.80;}
+              @else if $font-size == 56px {$shift:.80;}
+              @else if $font-size == 58px {$shift:.76;}
+              @else if $font-size == 60px {$shift:.75;}
               @else{
                 $font-size:$base-font-size;
               }
