--- a/_base-base.scss
+++ b/_base-base.scss
@@ -61,14 +61,20 @@
     @else if $font-size == 24px {$shift:.70;}
     @else if $font-size == 26px {$shift:.67;}
     @else if $font-size == 28px {$shift:.62;}
-    @else if $font-size == 30px {$shift:.62;}
+    @else if $font-size == 30px {
+      @if $lines == 1 {$shift:.12;}
+      @else {$shift: .62;}
+    }
     @else if $font-size == 32px {$shift:.58;}
     @else if $font-size == 34px {$shift:.58;}
     @else if $font-size == 36px {$shift:.55;}
     @else if $font-size == 38px {$shift:.50;}
     @else if $font-size == 40px {$shift:.48;}
     @else if $font-size == 48px {$shift:.43;}
-    @else if $font-size == 60px {$shift:.70;}
+    @else if $font-size == 60px {
+      @if $lines == 2{$shift:.20;}
+      @else {$shift:.70;}
+    }
     @else{
       $font-size:$base-font-size;
     }
